sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:2: error: method solve overrides nothing
override def solve() {
             ^DutchFlagAlgo:7: warning: comparing values of types Int and java.awt.Color using `==' will always yield false
       if (getCouleur(i)==Color.red){
                        ^DutchFlagAlgo:8: warning: comparing values of types Int and java.awt.Color using `==' will always yield false
         if (getCouleur(getTaille-j)==Color.blue || getCouleur(getTaille-j)==Color.white){
                                    ^DutchFlagAlgo:8: warning: comparing values of types Int and java.awt.Color using `==' will always yield false
         if (getCouleur(getTaille-j)==Color.blue || getCouleur(getTaille-j)==Color.white){
                                                                           ^DutchFlagAlgo:11: warning: comparing values of types Int and java.awt.Color using `==' will always yield false
        } else if (getCouleur(i)==Color.white) {
                                ^DutchFlagAlgo:12: warning: comparing values of types Int and java.awt.Color using `==' will always yield false
         if (getCouleur(getTaille-j)==Color.blue){
                                    ^