sort.dutchflag.DutchFlagAlgo.scala.code
override def solve() {
  var c=0
  while (c!=15){
   for (i <- 1 to getTaille-1){
     for (j <- 1 to getTaille-i-1){
       if (getCouleur(i)==Color.red){
         if (getCouleur(getTaille-j)==Color.blue || getCouleur(getTaille-j)==Color.white){
           echange(i,getTaille-j)
         }
     	 } else if (getCouleur(i)==Color.white) {
         if (getCouleur(getTaille-j)==Color.blue){
           echange(i,getTaille-j)
         }
       }
   		}
		}
    c=c+1
	}
}